--- a/Translations/German/text-game-change.xml
+++ b/Translations/German/text-game-change.xml
@@ -234,6 +234,18 @@
 		<zType>TEXT_GAME_DECISION_RETIRING_GENERAL_PROMPT</zType>
 		<Translation>Wähle neuen Feldherr</Translation>
 	</Entry>
+	<Entry>
+		<zType>TEXT_GAME_DECISION_DEAD_GOVERNOR_TITLE</zType>
+		<Translation>Tot eines Stadthalters</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_GAME_DECISION_DEAD_GOVERNOR</zType>
+		<Translation>{0_character}, Stadthalter von {1_city} ist während der Ausübung seines Amtes gestorben.</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_GAME_DECISION_DEAD_GOVERNOR_PROMPT</zType>
+		<Translation>Wähle neuen Stadthalter</Translation>
+	</Entry>
 	<!--Do Bonus-->
 	<Entry>
 		<zType>TEXT_GAME_DO_BONUS_MEMORY_ALL_PLAYERS</zType>
@@ -258,6 +270,10 @@
 	<Entry>
 		<zType>TEXT_GAME_DO_BONUS_DIPLOMACY_WITH_PLAYER</zType>
 		<Translation>{0_diplomacy} mit {1_player}</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_GAME_DO_BONUS_ALLIANCE_WITH</zType>
+		<Translation>{0_player} im Bündnis mit {1_other}</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_GAME_DO_BONUS_OTHER_PLAYER</zType>
@@ -404,6 +420,10 @@
 		<Translation>Wird bekannt als {0_nickname}</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_GAME_DO_BONUS_VICTORY</zType>
+		<Translation>{0_victory} Sieg</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_GAME_DO_BONUS_ADD_COURTIER_OTHER</zType>
 		<Translation>{0,1_player} {1_courtier}</Translation>
 	</Entry>
@@ -524,6 +544,10 @@
 		<Translation>{0_vegetation} von {1_tile}</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_GAME_DO_BONUS_BARB_RAID</zType>
+		<Translation>Überfall der {0,1_barbarian} {1_improvement} von {2_tile}</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_GAME_DO_BONUS_PLAYER_ADOPT_RELIGION</zType>
 		<Translation>{0_player}: Übernehme {1_religion} als Staatsreligionn</Translation>
 	</Entry>
@@ -561,7 +585,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_GAME_CHARACTER_MISSION_NO_EFFECT</zType>
-		<Translation>Kein Effekt</Translation>
+		<Translation>{0_character}: {1_mission} hat keinen Effekt</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_GAME_UNIT_ATTACK_CRITICAL</zType>
